apps/filebrowser/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: hurlenko/filebrowser
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: hdd-data
              mountPath: /data
            - name: homelab-configs
              mountPath: /branding
              subPath: filebrowser/branding
            - name: homelab-configs
              mountPath: /config
              subPath: filebrowser/config
      volumes:
        - name: hdd-data
          hostPath:
            path: /hdd
            type: Directory
        - name: homelab-configs
          persistentVolumeClaim:
            claimName: homelab-configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: homelab
spec:
  selector:
    app: filebrowser
  ports:
    - port: 8188
      targetPort: 8080
  type: LoadBalancer
